--- a/back/package.json
+++ b/back/package.json
@@ -35,6 +35,7 @@
     "@types/cookie": "^0.4.1",
     "@types/socket.io": "^3.0.2",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
