--- a/back/package.json
+++ b/back/package.json
@@ -36,6 +36,8 @@
     "@types/socket.io": "^3.0.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
