--- a/back/package.json
+++ b/back/package.json
@@ -22,7 +22,8 @@
     "db:drop": "npm run typeorm schema:drop",
     "db:create": "npm run typeorm migration:generate -- -n",
     "db:migrate": "npm run typeorm migration:run",
-    "db:seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config=src/ormseedconfig.ts migration:run"
+    "db:seed": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config=src/ormseedconfig.ts migration:run",
+    "db:restart": "npm run db:drop && npm run db:migrate && npm run db:seed"
   },
   "dependencies": {
     "@nestjs/axios": "0.0.1",
