--- a/back/package.json
+++ b/back/package.json
@@ -42,6 +42,7 @@
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
+    "otplib": "^12.0.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
