--- a/back/package.json
+++ b/back/package.json
@@ -44,6 +44,7 @@
     "module-alias": "^2.2.2",
     "otplib": "^12.0.1",
     "pg": "^8.7.1",
+    "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
