--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:win": "set IS_TS_NODE=true && nest start --watch",
     "start:linux": "IS_TS_NODE=true nest start --watch",
+    "start:win:debug": "set IS_TS_NODE=true && nest start --debug --watch",
+    "start:linux:debug": "IS_TS_NODE=true nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
