--- a/back/package.json
+++ b/back/package.json
@@ -35,7 +35,9 @@
     "@nestjs/platform-socket.io": "^8.0.6",
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.0.6",
+    "@socket.io/postgres-adapter": "^0.1.1",
     "@types/cookie": "^0.4.1",
+    "@types/pg": "^8.6.1",
     "@types/socket.io": "^3.0.2",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
