--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-oauth-popup": "^1.0.5",
     "react-scripts": "^4.0.3",
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.3.2",
