--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-oauth-popup": "^1.0.5",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "^4.0.3",
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.3.2",
