--- a/back/package.json
+++ b/back/package.json
@@ -51,6 +51,7 @@
     "pg": "^8.7.1",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
+    "reinstall": "^2.0.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "typeorm": "^0.2.37"
