--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-oauth-popup": "^1.0.5",
@@ -16,6 +17,7 @@
     "socket.io": "^4.3.2",
     "socket.io-client": "^4.3.2",
     "typescript": "^4.5.2",
+    "usehooks-ts": "^2.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
