--- a/front/package.json
+++ b/front/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
+    "react-bootstrap": "^2.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-oauth-popup": "^1.0.5",
